--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
-
+/* 
 body{
-     /* background: #D2D2D2; */
-} 
+     background: #D2D2D2;
+}  */
 
 .container{
     max-width: 1440px;
@@ -17,7 +17,7 @@ body{
   display:flex;
   align-items:center;
   justify-content:center;
-  background:rgba(0,0,0,0.2);
+  background:rgba(0,0,0,0.5);
   z-index:9999;
   pointer-events:none; /* let clicks through if you prefer */
 }
